// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity property has invalid identifier should have validation failure for property: when domain entity property has invalid identifier should have validation failures for each property -> message  1`] = `"Domain entity property 'UndefinedEntityName' does not match any declared Domain Entity or Domain Entity Subclass."`;

exports[`when domain entity property has invalid identifier should have validation failure for property: when domain entity property has invalid identifier should have validation failures for each property -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 1`] = `"Domain entity property 'UndefinedEntityName1' does not match any declared Domain Entity or Domain Entity Subclass."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: message 0 2`] = `"Domain entity property 'UndefinedEntityName2' does not match any declared Domain Entity or Domain Entity Subclass."`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 1`] = `
Object {
  "column": 4,
  "line": 5,
  "tokenText": "domain entity",
}
`;

exports[`when domain entity property on association has invalid identifier should have validation failure for property: sourceMap 0 2`] = `
Object {
  "column": 4,
  "line": 8,
  "tokenText": "domain entity",
}
`;
